# confluence-rs

./: Cargo.toml
src/: http.rs  lib.rs  page.rs  wsdl.rs
src/rpser/: mod.rs  xml.rs
